Undid changes to List management.