@@ -1,11 +1,12 @@
 package net.fettlol.lib.list;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class BlockLootTableGroups {
     public static List<String> SPAWNERS;
 
     static {
-        SPAWNERS = List.of("minecraft:blocks/spawner");
+        SPAWNERS = Arrays.asList("minecraft:blocks/spawner");
     }
 }
